# candidate-matching-service

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  example_calls.sh  main.py  pyproject.toml
api/: __init__.py  app.py
api/models/: __init__.py  schemas.py
api/routes/: __init__.py  ingest.py  search.py
api/services/: __init__.py  embedding.py  hybrid_search.py
data/: candidates.json  jobs.json
index/: __init__.py  hybrid_search.py  search_engine.py
tests/: __init__.py  test_api.py
